# NearMeet

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  FAQ.md  INDEX.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  QUICKSTART.md  README.md  STATUS.txt  pyproject.toml  requirements.txt  setup.py  visual_design_verification.py
config/: default.json
docs/: ANIMATIONS_GUIDE.md  API.md  ARCHITECTURE.md  CHANGELOG_VISUAL_DESIGN.md  CONTRIBUTING.md  Cahier_des_Charges.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  FAQ.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README_VISUAL_DESIGN.md  STYLING_GUIDE.md  UI_IMPROVEMENTS.md  VISUAL_DESIGN_COMPLETE.md  VISUAL_DESIGN_INDEX.md  VISUAL_DESIGN_QUICK_START.md  VISUAL_DESIGN_VERIFICATION.json
examples/: animation_demo.py  widget_showcase.py
scripts/: build.py  test.py
src/: __init__.py  __main__.py  config.py  constants.py
src/chat/: __init__.py  formatter.py  manager.py  message.py
src/core/: __init__.py  app.py  enums.py
src/database/: __init__.py  db.py  models.py  queries.py
src/file_sharing/: __init__.py
src/media/: __init__.py
src/network/: __init__.py  client.py  handlers.py  protocol.py  security.py  server.py
src/ui/: __init__.py  animations.py  main_window.py  preferences.py  styles.py  widgets.py
src/utils/: __init__.py  helpers.py  logger.py  validators.py
tests/: __init__.py  test_animations.py  test_chat.py  test_network.py  test_security.py  test_validators.py  test_widgets.py
